--- a/sass/themes/pc/lib/module/_breadcrumbs.scss
+++ b/sass/themes/pc/lib/module/_breadcrumbs.scss
@@ -44,6 +44,12 @@
                 display: block;
                 color: #666666;
             }
+
+            > a {
+                &:hover {
+                    color: $base-color;
+                }
+            }
         }
         // li end
     }
