--- a/sass/themes/pc/page/profile/detail/_nav.scss
+++ b/sass/themes/pc/page/profile/detail/_nav.scss
@@ -19,6 +19,13 @@
             @include remCalc("border", (1 solid #eeeeee));
             border-top: none;
 
+
+            // max-screen
+            @include max-screen($base-max-screen){
+                @include remCalc("padding", 28 0 0 152);
+            }
+            // max-screen end
+
             // list
             > .list {
                 display: flex;
