--- a/sass/themes/pc/layout/header/_main.scss
+++ b/sass/themes/pc/layout/header/_main.scss
@@ -51,6 +51,7 @@
         @include remCalc("border-radius", 10);
         @include remCalc("box-shadow", (0 4 8 0 rgba(0, 0, 0, 0.2)));
         background-color: #ffffff;
+        z-index: 1;
 
         // city
         > .city {
