--- a/sass/themes/pc/layout/header/_top.scss
+++ b/sass/themes/pc/layout/header/_top.scss
@@ -40,7 +40,7 @@
                     background-repeat: no-repeat;
                     background-position: center center;
                     background-size: contain;
-                    // text-indent: -9999em;
+                    text-indent: -9999em;
                 }
             }
             // logo end
