--- a/sass/themes/pc/lib/module/blocks/shop/_content.scss
+++ b/sass/themes/pc/lib/module/blocks/shop/_content.scss
@@ -23,8 +23,8 @@
         > .ui_shoplist {
             > li {
                 border: none;
-                background-color: #f4f4f4;
-                @include remCalc("margin", 0 0 15);
+                // background-color: #f4f4f4;
+                @include remCalc("margin", 0 0 20);
 
                 &:last-child {
                     margin-bottom: 0;
@@ -39,6 +39,7 @@
                         @include remCalc("width", 70);
                     }
                     // img end
+
                     // content
                     > .content {
                         // info, region
@@ -50,23 +51,23 @@
                     }
                     // content end
 
-                    &:before,
-                    &:after {
-                        position: absolute;
-                        @include position-center(top);
-                        @include remCalc("right", 10);
-                        content: "";
-                    }
-                    &:before {
-                        @include remCalc("width", 20);
-                        @include remCalc("height", 20);
-                        border-radius: 50%;
-                        background-color: $base-color;
-                    }
-                    &:after {
-                        @include remCalc("margin", -2 8);
-                        @include triangles("arrow", "left", #ffffff, 6, 2);
-                    }
+                    // &:before,
+                    // &:after {
+                    //     position: absolute;
+                    //     @include position-center(top);
+                    //     @include remCalc("right", 10);
+                    //     content: "";
+                    // }
+                    // &:before {
+                    //     @include remCalc("width", 20);
+                    //     @include remCalc("height", 20);
+                    //     border-radius: 50%;
+                    //     background-color: $base-color;
+                    // }
+                    // &:after {
+                    //     @include remCalc("margin", -2 8);
+                    //     @include triangles("arrow", "left", #ffffff, 6, 2);
+                    // }
                 }
             }
         }
