--- a/sass/themes/mobile/lib/module/text/_col.scss
+++ b/sass/themes/mobile/lib/module/text/_col.scss
@@ -44,9 +44,22 @@
             .tips,
             .error,
             .txt {
-                @include remCalc("margin", $base-forms-padding-size + 2 0);
+                @include remCalc("margin", $base-forms-padding-size 0);
+            }
+            .error {
+                font-style: italic;
             }
             // tips, error end
+
+            .input,
+            .number,
+            .textarea,
+            .select {
+                &.error {
+                    margin-top: 0;
+                    margin-bottom: 0;
+                }
+            }
         }
         // content end
     }
